fixed overflow

--- a/src/global.css
+++ b/src/global.css
@@ -21,7 +21,11 @@
     underline decoration-gray-300 underline-offset-5;
   }
   p {
-    @apply mb-1-h;
+    @apply mb-1-h overflow-x-auto sm:overflow-x-visible;
+    /* @apply mb-1-h overflow-x-hidden sm:overflow-x-auto; */
+    /* @apply mb-1-h; */
+    /* @apply mb-1-h bg-green-100 sm:bg-blue-100; */
+    /* @apply mb-1-h bg-blue-100 sm:bg-green-100; */
   }
   ul {
     @apply list-outside list-none ml-2-ex mb-1-h relative;
